@@ -94,6 +94,8 @@ Broker:
 - Add `ciphers_tls1.3` option, to allow setting TLS v1.3 ciphersuites.
   Closes #1825.
 - Report an error if the config file is set to a directory. Closes #1814.
+- Fix bridges incorrectly setting Wills to manage remote notifications when
+  `notifications_local_only` was set true. Closes #1902.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
